assign3/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AUTO
    CONST
    EXTERN
    GOTO
    NULL
    REGISTER
    SHORT
    SIGNED
    STATIC
    TYPEDEF
    UNION
    UNSIGNED
    VOLATILE

Grammar

Rule 0     S' -> program
Rule 1     program -> translation_unit
Rule 2     translation_unit -> external_declaration
Rule 3     translation_unit -> translation_unit external_declaration
Rule 4     external_declaration -> function_definition
Rule 5     external_declaration -> declaration
Rule 6     function_definition -> type_specifier declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
Rule 7     function_definition -> type_specifier declarator func_scope func_rparen_2 function_body pop_sym
Rule 8     func_scope -> L_PAREN
Rule 9     func_rparen_1 -> R_PAREN
Rule 10    func_rparen_2 -> R_PAREN
Rule 11    primary_expression -> IDENTIFIER
Rule 12    primary_expression -> INT_CONSTANT
Rule 13    primary_expression -> HEX_CONSTANT
Rule 14    primary_expression -> OCTAL_CONSTANT
Rule 15    primary_expression -> EXPONENT_CONSTANT
Rule 16    primary_expression -> REAL_CONSTANT
Rule 17    primary_expression -> CHAR_CONSTANT
Rule 18    primary_expression -> STR_CONSTANT
Rule 19    primary_expression -> L_PAREN expression R_PAREN
Rule 20    primary_expression -> TRUE
Rule 21    primary_expression -> FALSE
Rule 22    postfix_expression -> primary_expression
Rule 23    postfix_expression -> postfix_expression INCREMENT
Rule 24    postfix_expression -> postfix_expression DECREMENT
Rule 25    postfix_expression -> postfix_expression L_SQBR expression R_SQBR
Rule 26    postfix_expression -> postfix_expression L_PAREN R_PAREN
Rule 27    postfix_expression -> postfix_expression L_PAREN argument_expression_list R_PAREN
Rule 28    postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 29    postfix_expression -> postfix_expression ARROW IDENTIFIER
Rule 30    argument_expression_list -> assignment_expression
Rule 31    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 32    unary_expression -> postfix_expression
Rule 33    unary_expression -> INCREMENT unary_expression
Rule 34    unary_expression -> DECREMENT unary_expression
Rule 35    unary_expression -> unary_operator cast_expression
Rule 36    unary_expression -> SIZEOF unary_expression
Rule 37    unary_expression -> SIZEOF L_PAREN type_name R_PAREN
Rule 38    unary_operator -> BITWISE_AND
Rule 39    unary_operator -> MULTIPLY
Rule 40    unary_operator -> ADD
Rule 41    unary_operator -> SUBSTRACT
Rule 42    unary_operator -> BITWISE_ONE_COMPLEMENT
Rule 43    unary_operator -> LOGICAL_NOT
Rule 44    cast_expression -> unary_expression
Rule 45    cast_expression -> L_PAREN type_name R_PAREN cast_expression
Rule 46    multiplicative_expression -> cast_expression
Rule 47    multiplicative_expression -> multiplicative_expression MULTIPLY cast_expression
Rule 48    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 49    multiplicative_expression -> multiplicative_expression MODULUS cast_expression
Rule 50    additive_expression -> multiplicative_expression
Rule 51    additive_expression -> additive_expression ADD multiplicative_expression
Rule 52    additive_expression -> additive_expression SUBSTRACT multiplicative_expression
Rule 53    shift_expression -> additive_expression
Rule 54    shift_expression -> shift_expression LEFT_SHIFT additive_expression
Rule 55    shift_expression -> shift_expression RIGHT_SHIFT additive_expression
Rule 56    relational_expression -> shift_expression
Rule 57    relational_expression -> relational_expression LESS shift_expression
Rule 58    relational_expression -> relational_expression GREATER shift_expression
Rule 59    relational_expression -> relational_expression LESS_EQUALS shift_expression
Rule 60    relational_expression -> relational_expression GREATER_EQUALS shift_expression
Rule 61    equality_expression -> relational_expression
Rule 62    equality_expression -> equality_expression EQUALS relational_expression
Rule 63    equality_expression -> equality_expression NOT_EQUALS relational_expression
Rule 64    and_expression -> equality_expression
Rule 65    and_expression -> and_expression BITWISE_AND equality_expression
Rule 66    exclusive_or_expression -> and_expression
Rule 67    exclusive_or_expression -> exclusive_or_expression BITWISE_XOR and_expression
Rule 68    inclusive_or_expression -> exclusive_or_expression
Rule 69    inclusive_or_expression -> inclusive_or_expression BITWISE_OR exclusive_or_expression
Rule 70    logical_and_expression -> inclusive_or_expression
Rule 71    logical_and_expression -> logical_and_expression LOGICAL_AND inclusive_or_expression
Rule 72    logical_or_expression -> logical_and_expression
Rule 73    logical_or_expression -> logical_or_expression LOGICAL_OR logical_and_expression
Rule 74    conditional_expression -> logical_or_expression
Rule 75    conditional_expression -> logical_or_expression QUES_MARK expression COLON conditional_expression
Rule 76    assignment_expression -> conditional_expression
Rule 77    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 78    assignment_operator -> ASSIGNMENT
Rule 79    assignment_operator -> MULTIPLY_ASSIGNMENT
Rule 80    assignment_operator -> DIVIDE_ASSIGNMENT
Rule 81    assignment_operator -> MODULUS_ASSIGNMENT
Rule 82    assignment_operator -> ADD_ASSIGNMENT
Rule 83    assignment_operator -> SUBSTRACT_ASSIGNMENT
Rule 84    assignment_operator -> LEFT_SHIFT_ASSIGNMENT
Rule 85    assignment_operator -> RIGHT_SHIFT_ASSIGNMENT
Rule 86    assignment_operator -> BITWISE_AND_ASSIGNMENT
Rule 87    assignment_operator -> BITWISE_XOR_ASSIGNMENT
Rule 88    assignment_operator -> BITWISE_OR_ASSIGNMENT
Rule 89    expression -> assignment_expression
Rule 90    expression -> expression COMMA assignment_expression
Rule 91    constant_expression -> conditional_expression
Rule 92    declaration -> struct_specifier SEMI_COLON
Rule 93    declaration -> enum_specifier SEMI_COLON
Rule 94    declaration -> type_specifier init_declarator_list SEMI_COLON
Rule 95    init_declarator_list -> init_declarator
Rule 96    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 97    init_declarator -> declarator
Rule 98    init_declarator -> declarator ASSIGNMENT initializer
Rule 99    type_specifier -> VOID
Rule 100   type_specifier -> CHAR
Rule 101   type_specifier -> INT
Rule 102   type_specifier -> LONG
Rule 103   type_specifier -> FLOAT
Rule 104   type_specifier -> DOUBLE
Rule 105   type_specifier -> STRUCT IDENTIFIER
Rule 106   type_specifier -> ENUM IDENTIFIER
Rule 107   type_specifier -> BOOL
Rule 108   struct_specifier -> STRUCT IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES
Rule 109   add_sym_struct -> L_BRACES
Rule 110   struct_declaration_list -> struct_declaration
Rule 111   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 112   struct_declaration -> type_specifier struct_declarator_list SEMI_COLON
Rule 113   struct_declarator_list -> declarator
Rule 114   struct_declarator_list -> struct_declarator_list COMMA declarator
Rule 115   enum_specifier -> ENUM IDENTIFIER L_BRACES enumerator_list R_BRACES
Rule 116   enumerator_list -> enumerator
Rule 117   enumerator_list -> enumerator_list COMMA enumerator
Rule 118   enumerator -> IDENTIFIER
Rule 119   enumerator -> IDENTIFIER ASSIGNMENT constant_expression
Rule 120   declarator -> pointer direct_declarator
Rule 121   declarator -> no_pointer direct_declarator
Rule 122   direct_declarator -> IDENTIFIER
Rule 123   direct_declarator -> L_PAREN declarator R_PAREN
Rule 124   direct_declarator -> direct_declarator L_SQBR INT_CONSTANT R_SQBR
Rule 125   pointer -> MULTIPLY
Rule 126   pointer -> pointer MULTIPLY
Rule 127   no_pointer -> <empty>
Rule 128   parameter_type_list -> parameter_declaration
Rule 129   parameter_type_list -> parameter_type_list COMMA parameter_declaration
Rule 130   parameter_declaration -> type_specifier declarator
Rule 131   type_name -> type_specifier
Rule 132   type_name -> type_specifier pointer
Rule 133   initializer -> assignment_expression
Rule 134   initializer -> L_BRACES initializer_list R_BRACES
Rule 135   initializer -> L_BRACES initializer_list COMMA R_BRACES
Rule 136   initializer_list -> initializer
Rule 137   initializer_list -> initializer_list COMMA initializer
Rule 138   statement -> compound_statement
Rule 139   statement -> expression_statement
Rule 140   statement -> selection_statement
Rule 141   statement -> iteration_statement
Rule 142   statement -> jump_statement
Rule 143   labeled_statement_list -> labeled_statement_list labeled_statement
Rule 144   labeled_statement_list -> labeled_statement
Rule 145   labeled_statement -> CASE constant_expression COLON statement
Rule 146   labeled_statement -> DEFAULT COLON statement
Rule 147   compound_statement -> L_BRACES R_BRACES
Rule 148   compound_statement -> L_BRACES add_sym block_item_list pop_sym R_BRACES
Rule 149   function_body -> L_BRACES R_BRACES
Rule 150   function_body -> L_BRACES block_item_list R_BRACES
Rule 151   block_item_list -> block_item
Rule 152   block_item_list -> block_item_list block_item
Rule 153   block_item -> statement
Rule 154   block_item -> declaration
Rule 155   expression_statement -> SEMI_COLON
Rule 156   expression_statement -> expression SEMI_COLON
Rule 157   selection_statement -> IF L_PAREN expression R_PAREN statement
Rule 158   selection_statement -> IF L_PAREN expression R_PAREN statement ELSE statement
Rule 159   selection_statement -> SWITCH L_PAREN expression R_PAREN L_BRACES add_sym labeled_statement_list pop_sym R_BRACES
Rule 160   iteration_statement -> WHILE L_PAREN expression R_PAREN statement
Rule 161   iteration_statement -> DO statement WHILE L_PAREN expression R_PAREN SEMI_COLON
Rule 162   iteration_statement -> FOR L_PAREN expression_statement expression_statement R_PAREN statement
Rule 163   iteration_statement -> FOR L_PAREN expression_statement expression_statement expression R_PAREN statement
Rule 164   jump_statement -> CONTINUE SEMI_COLON
Rule 165   jump_statement -> BREAK SEMI_COLON
Rule 166   jump_statement -> RETURN SEMI_COLON
Rule 167   jump_statement -> RETURN expression SEMI_COLON
Rule 168   add_sym -> <empty>
Rule 169   pop_sym -> <empty>

Terminals, with rules where they appear

ADD                  : 40 51
ADD_ASSIGNMENT       : 82
ARROW                : 29
ASSIGNMENT           : 78 98 119
AUTO                 : 
BITWISE_AND          : 38 65
BITWISE_AND_ASSIGNMENT : 86
BITWISE_ONE_COMPLEMENT : 42
BITWISE_OR           : 69
BITWISE_OR_ASSIGNMENT : 88
BITWISE_XOR          : 67
BITWISE_XOR_ASSIGNMENT : 87
BOOL                 : 107
BREAK                : 165
CASE                 : 145
CHAR                 : 100
CHAR_CONSTANT        : 17
COLON                : 75 145 146
COMMA                : 31 90 96 114 117 129 135 137
CONST                : 
CONTINUE             : 164
DECREMENT            : 24 34
DEFAULT              : 146
DIVIDE               : 48
DIVIDE_ASSIGNMENT    : 80
DO                   : 161
DOT                  : 28
DOUBLE               : 104
ELSE                 : 158
ENUM                 : 106 115
EQUALS               : 62
EXPONENT_CONSTANT    : 15
EXTERN               : 
FALSE                : 21
FLOAT                : 103
FOR                  : 162 163
GOTO                 : 
GREATER              : 58
GREATER_EQUALS       : 60
HEX_CONSTANT         : 13
IDENTIFIER           : 11 28 29 105 106 108 115 118 119 122
IF                   : 157 158
INCREMENT            : 23 33
INT                  : 101
INT_CONSTANT         : 12 124
LEFT_SHIFT           : 54
LEFT_SHIFT_ASSIGNMENT : 84
LESS                 : 57
LESS_EQUALS          : 59
LOGICAL_AND          : 71
LOGICAL_NOT          : 43
LOGICAL_OR           : 73
LONG                 : 102
L_BRACES             : 109 115 134 135 147 148 149 150 159
L_PAREN              : 8 19 26 27 37 45 123 157 158 159 160 161 162 163
L_SQBR               : 25 124
MODULUS              : 49
MODULUS_ASSIGNMENT   : 81
MULTIPLY             : 39 47 125 126
MULTIPLY_ASSIGNMENT  : 79
NOT_EQUALS           : 63
NULL                 : 
OCTAL_CONSTANT       : 14
QUES_MARK            : 75
REAL_CONSTANT        : 16
REGISTER             : 
RETURN               : 166 167
RIGHT_SHIFT          : 55
RIGHT_SHIFT_ASSIGNMENT : 85
R_BRACES             : 108 115 134 135 147 148 149 150 159
R_PAREN              : 9 10 19 26 27 37 45 123 157 158 159 160 161 162 163
R_SQBR               : 25 124
SEMI_COLON           : 92 93 94 112 155 156 161 164 165 166 167
SHORT                : 
SIGNED               : 
SIZEOF               : 36 37
STATIC               : 
STRUCT               : 105 108
STR_CONSTANT         : 18
SUBSTRACT            : 41 52
SUBSTRACT_ASSIGNMENT : 83
SWITCH               : 159
TRUE                 : 20
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 99
VOLATILE             : 
WHILE                : 160 161
error                : 

Nonterminals, with rules where they appear

add_sym              : 148 159
add_sym_struct       : 108
additive_expression  : 51 52 53 54 55
and_expression       : 65 66 67
argument_expression_list : 27 31
assignment_expression : 30 31 77 89 90 133
assignment_operator  : 77
block_item           : 151 152
block_item_list      : 148 150 152
cast_expression      : 35 45 46 47 48 49
compound_statement   : 138
conditional_expression : 75 76 91
constant_expression  : 119 145
declaration          : 5 154
declarator           : 6 7 97 98 113 114 123 130
direct_declarator    : 120 121 124
enum_specifier       : 93
enumerator           : 116 117
enumerator_list      : 115 117
equality_expression  : 62 63 64 65
exclusive_or_expression : 67 68 69
expression           : 19 25 75 90 156 157 158 159 160 161 163 167
expression_statement : 139 162 162 163 163
external_declaration : 2 3
func_rparen_1        : 6
func_rparen_2        : 7
func_scope           : 6 7
function_body        : 6 7
function_definition  : 4
inclusive_or_expression : 69 70 71
init_declarator      : 95 96
init_declarator_list : 94 96
initializer          : 98 136 137
initializer_list     : 134 135 137
iteration_statement  : 141
jump_statement       : 142
labeled_statement    : 143 144
labeled_statement_list : 143 159
logical_and_expression : 71 72 73
logical_or_expression : 73 74 75
multiplicative_expression : 47 48 49 50 51 52
no_pointer           : 121
parameter_declaration : 128 129
parameter_type_list  : 6 129
pointer              : 120 126 132
pop_sym              : 6 7 108 148 159
postfix_expression   : 23 24 25 26 27 28 29 32
primary_expression   : 22
program              : 0
relational_expression : 57 58 59 60 61 62 63
selection_statement  : 140
shift_expression     : 54 55 56 57 58 59 60
statement            : 145 146 153 157 158 158 160 161 162 163
struct_declaration   : 110 111
struct_declaration_list : 108 111
struct_declarator_list : 112 114
struct_specifier     : 92
translation_unit     : 1 3
type_name            : 37 45
type_specifier       : 6 7 94 112 130 131 132
unary_expression     : 33 34 36 44 77
unary_operator       : 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . translation_unit
    (2) translation_unit -> . external_declaration
    (3) translation_unit -> . translation_unit external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> . type_specifier declarator func_scope func_rparen_2 function_body pop_sym
    (92) declaration -> . struct_specifier SEMI_COLON
    (93) declaration -> . enum_specifier SEMI_COLON
    (94) declaration -> . type_specifier init_declarator_list SEMI_COLON
    (99) type_specifier -> . VOID
    (100) type_specifier -> . CHAR
    (101) type_specifier -> . INT
    (102) type_specifier -> . LONG
    (103) type_specifier -> . FLOAT
    (104) type_specifier -> . DOUBLE
    (105) type_specifier -> . STRUCT IDENTIFIER
    (106) type_specifier -> . ENUM IDENTIFIER
    (107) type_specifier -> . BOOL
    (108) struct_specifier -> . STRUCT IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES
    (115) enum_specifier -> . ENUM IDENTIFIER L_BRACES enumerator_list R_BRACES

    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    LONG            shift and go to state 12
    FLOAT           shift and go to state 13
    DOUBLE          shift and go to state 14
    STRUCT          shift and go to state 15
    ENUM            shift and go to state 16
    BOOL            shift and go to state 17

    program                        shift and go to state 1
    translation_unit               shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 7
    enum_specifier                 shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> translation_unit .
    (3) translation_unit -> translation_unit . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> . type_specifier declarator func_scope func_rparen_2 function_body pop_sym
    (92) declaration -> . struct_specifier SEMI_COLON
    (93) declaration -> . enum_specifier SEMI_COLON
    (94) declaration -> . type_specifier init_declarator_list SEMI_COLON
    (99) type_specifier -> . VOID
    (100) type_specifier -> . CHAR
    (101) type_specifier -> . INT
    (102) type_specifier -> . LONG
    (103) type_specifier -> . FLOAT
    (104) type_specifier -> . DOUBLE
    (105) type_specifier -> . STRUCT IDENTIFIER
    (106) type_specifier -> . ENUM IDENTIFIER
    (107) type_specifier -> . BOOL
    (108) struct_specifier -> . STRUCT IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES
    (115) enum_specifier -> . ENUM IDENTIFIER L_BRACES enumerator_list R_BRACES

    $end            reduce using rule 1 (program -> translation_unit .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    LONG            shift and go to state 12
    FLOAT           shift and go to state 13
    DOUBLE          shift and go to state 14
    STRUCT          shift and go to state 15
    ENUM            shift and go to state 16
    BOOL            shift and go to state 17

    external_declaration           shift and go to state 18
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 7
    enum_specifier                 shift and go to state 8

state 3

    (2) translation_unit -> external_declaration .

    VOID            reduce using rule 2 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> external_declaration .)
    INT             reduce using rule 2 (translation_unit -> external_declaration .)
    LONG            reduce using rule 2 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 2 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 2 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 2 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 2 (translation_unit -> external_declaration .)
    $end            reduce using rule 2 (translation_unit -> external_declaration .)


state 4

    (4) external_declaration -> function_definition .

    VOID            reduce using rule 4 (external_declaration -> function_definition .)
    CHAR            reduce using rule 4 (external_declaration -> function_definition .)
    INT             reduce using rule 4 (external_declaration -> function_definition .)
    LONG            reduce using rule 4 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 4 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 4 (external_declaration -> function_definition .)
    ENUM            reduce using rule 4 (external_declaration -> function_definition .)
    BOOL            reduce using rule 4 (external_declaration -> function_definition .)
    $end            reduce using rule 4 (external_declaration -> function_definition .)


state 5

    (5) external_declaration -> declaration .

    VOID            reduce using rule 5 (external_declaration -> declaration .)
    CHAR            reduce using rule 5 (external_declaration -> declaration .)
    INT             reduce using rule 5 (external_declaration -> declaration .)
    LONG            reduce using rule 5 (external_declaration -> declaration .)
    FLOAT           reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 5 (external_declaration -> declaration .)
    STRUCT          reduce using rule 5 (external_declaration -> declaration .)
    ENUM            reduce using rule 5 (external_declaration -> declaration .)
    BOOL            reduce using rule 5 (external_declaration -> declaration .)
    $end            reduce using rule 5 (external_declaration -> declaration .)


state 6

    (6) function_definition -> type_specifier . declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> type_specifier . declarator func_scope func_rparen_2 function_body pop_sym
    (94) declaration -> type_specifier . init_declarator_list SEMI_COLON
    (120) declarator -> . pointer direct_declarator
    (121) declarator -> . no_pointer direct_declarator
    (95) init_declarator_list -> . init_declarator
    (96) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (125) pointer -> . MULTIPLY
    (126) pointer -> . pointer MULTIPLY
    (127) no_pointer -> .
    (97) init_declarator -> . declarator
    (98) init_declarator -> . declarator ASSIGNMENT initializer

    MULTIPLY        shift and go to state 24
    IDENTIFIER      reduce using rule 127 (no_pointer -> .)
    L_PAREN         reduce using rule 127 (no_pointer -> .)

    declarator                     shift and go to state 19
    init_declarator_list           shift and go to state 20
    pointer                        shift and go to state 21
    no_pointer                     shift and go to state 22
    init_declarator                shift and go to state 23

state 7

    (92) declaration -> struct_specifier . SEMI_COLON

    SEMI_COLON      shift and go to state 25


state 8

    (93) declaration -> enum_specifier . SEMI_COLON

    SEMI_COLON      shift and go to state 26


state 9

    (99) type_specifier -> VOID .

    MULTIPLY        reduce using rule 99 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 99 (type_specifier -> VOID .)
    L_PAREN         reduce using rule 99 (type_specifier -> VOID .)
    R_PAREN         reduce using rule 99 (type_specifier -> VOID .)


state 10

    (100) type_specifier -> CHAR .

    MULTIPLY        reduce using rule 100 (type_specifier -> CHAR .)
    IDENTIFIER      reduce using rule 100 (type_specifier -> CHAR .)
    L_PAREN         reduce using rule 100 (type_specifier -> CHAR .)
    R_PAREN         reduce using rule 100 (type_specifier -> CHAR .)


state 11

    (101) type_specifier -> INT .

    MULTIPLY        reduce using rule 101 (type_specifier -> INT .)
    IDENTIFIER      reduce using rule 101 (type_specifier -> INT .)
    L_PAREN         reduce using rule 101 (type_specifier -> INT .)
    R_PAREN         reduce using rule 101 (type_specifier -> INT .)


state 12

    (102) type_specifier -> LONG .

    MULTIPLY        reduce using rule 102 (type_specifier -> LONG .)
    IDENTIFIER      reduce using rule 102 (type_specifier -> LONG .)
    L_PAREN         reduce using rule 102 (type_specifier -> LONG .)
    R_PAREN         reduce using rule 102 (type_specifier -> LONG .)


state 13

    (103) type_specifier -> FLOAT .

    MULTIPLY        reduce using rule 103 (type_specifier -> FLOAT .)
    IDENTIFIER      reduce using rule 103 (type_specifier -> FLOAT .)
    L_PAREN         reduce using rule 103 (type_specifier -> FLOAT .)
    R_PAREN         reduce using rule 103 (type_specifier -> FLOAT .)


state 14

    (104) type_specifier -> DOUBLE .

    MULTIPLY        reduce using rule 104 (type_specifier -> DOUBLE .)
    IDENTIFIER      reduce using rule 104 (type_specifier -> DOUBLE .)
    L_PAREN         reduce using rule 104 (type_specifier -> DOUBLE .)
    R_PAREN         reduce using rule 104 (type_specifier -> DOUBLE .)


state 15

    (105) type_specifier -> STRUCT . IDENTIFIER
    (108) struct_specifier -> STRUCT . IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES

    IDENTIFIER      shift and go to state 27


state 16

    (106) type_specifier -> ENUM . IDENTIFIER
    (115) enum_specifier -> ENUM . IDENTIFIER L_BRACES enumerator_list R_BRACES

    IDENTIFIER      shift and go to state 28


state 17

    (107) type_specifier -> BOOL .

    MULTIPLY        reduce using rule 107 (type_specifier -> BOOL .)
    IDENTIFIER      reduce using rule 107 (type_specifier -> BOOL .)
    L_PAREN         reduce using rule 107 (type_specifier -> BOOL .)
    R_PAREN         reduce using rule 107 (type_specifier -> BOOL .)


state 18

    (3) translation_unit -> translation_unit external_declaration .

    VOID            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    LONG            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    FLOAT           reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    DOUBLE          reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    STRUCT          reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    ENUM            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    BOOL            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)


state 19

    (6) function_definition -> type_specifier declarator . func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> type_specifier declarator . func_scope func_rparen_2 function_body pop_sym
    (97) init_declarator -> declarator .
    (98) init_declarator -> declarator . ASSIGNMENT initializer
    (8) func_scope -> . L_PAREN

    SEMI_COLON      reduce using rule 97 (init_declarator -> declarator .)
    COMMA           reduce using rule 97 (init_declarator -> declarator .)
    ASSIGNMENT      shift and go to state 30
    L_PAREN         shift and go to state 31

    func_scope                     shift and go to state 29

state 20

    (94) declaration -> type_specifier init_declarator_list . SEMI_COLON
    (96) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI_COLON      shift and go to state 32
    COMMA           shift and go to state 33


state 21

    (120) declarator -> pointer . direct_declarator
    (126) pointer -> pointer . MULTIPLY
    (122) direct_declarator -> . IDENTIFIER
    (123) direct_declarator -> . L_PAREN declarator R_PAREN
    (124) direct_declarator -> . direct_declarator L_SQBR INT_CONSTANT R_SQBR

    MULTIPLY        shift and go to state 35
    IDENTIFIER      shift and go to state 36
    L_PAREN         shift and go to state 37

    direct_declarator              shift and go to state 34

state 22

    (121) declarator -> no_pointer . direct_declarator
    (122) direct_declarator -> . IDENTIFIER
    (123) direct_declarator -> . L_PAREN declarator R_PAREN
    (124) direct_declarator -> . direct_declarator L_SQBR INT_CONSTANT R_SQBR

    IDENTIFIER      shift and go to state 36
    L_PAREN         shift and go to state 37

    direct_declarator              shift and go to state 38

state 23

    (95) init_declarator_list -> init_declarator .

    SEMI_COLON      reduce using rule 95 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 95 (init_declarator_list -> init_declarator .)


state 24

    (125) pointer -> MULTIPLY .

    MULTIPLY        reduce using rule 125 (pointer -> MULTIPLY .)
    IDENTIFIER      reduce using rule 125 (pointer -> MULTIPLY .)
    L_PAREN         reduce using rule 125 (pointer -> MULTIPLY .)
    R_PAREN         reduce using rule 125 (pointer -> MULTIPLY .)


state 25

    (92) declaration -> struct_specifier SEMI_COLON .

    VOID            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    CHAR            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    INT             reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    LONG            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    FLOAT           reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    DOUBLE          reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    STRUCT          reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    ENUM            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    BOOL            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    $end            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    R_BRACES        reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    L_BRACES        reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    SEMI_COLON      reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    IF              reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    SWITCH          reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    WHILE           reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    DO              reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    FOR             reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    CONTINUE        reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    BREAK           reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    RETURN          reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    INCREMENT       reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    DECREMENT       reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    SIZEOF          reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    BITWISE_AND     reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    MULTIPLY        reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    ADD             reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    SUBSTRACT       reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    BITWISE_ONE_COMPLEMENT reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    LOGICAL_NOT     reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    IDENTIFIER      reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    INT_CONSTANT    reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    HEX_CONSTANT    reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    OCTAL_CONSTANT  reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    EXPONENT_CONSTANT reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    REAL_CONSTANT   reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    CHAR_CONSTANT   reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    STR_CONSTANT    reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    L_PAREN         reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    TRUE            reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)
    FALSE           reduce using rule 92 (declaration -> struct_specifier SEMI_COLON .)


state 26

    (93) declaration -> enum_specifier SEMI_COLON .
